--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,7 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
+    "@headlessui/react": "^1.6.4",
     "@sanity/client": "^3.3.2",
     "@shopify/hydrogen": "^1.2.0",
     "clsx": "^1.1.1",
