--- a/cms/package.json
+++ b/cms/package.json
@@ -2,7 +2,7 @@
   "name": "hydrogen",
   "private": true,
   "version": "1.0.0",
-  "description": "",
+  "description": "Hydrogen is a React framework and SDK that you can use to build fast and dynamic Shopify custom storefronts",
   "main": "package.json",
   "author": "DavidAyala-DW <luis.zanabria2@unmsm.edu.pe>",
   "license": "UNLICENSED",
@@ -14,6 +14,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@portabletext/react": "^1.0.6",
     "@sanity/base": "^2.30.5",
     "@sanity/core": "^2.30.5",
     "@sanity/dashboard": "^2.30.5",
@@ -25,11 +26,11 @@
     "@sanity/vision": "^2.30.5",
     "eslint": "^8.6.0",
     "prop-types": "^15.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^17.0",
+    "react-dom": "^17.0",
+    "react-fast-compare": "^3.2.0",
     "rxjs": "^6.5.3",
     "sanity-plugin-asset-source-unsplash": "^0.2.1",
-    "sanity-plugin-dashboard-widget-netlify": "^1.3.0",
     "sanity-plugin-media": "^1.4.10",
     "styled-components": "^5.2.0"
   },
